<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical"
        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#efefef">

            <Button
                android:id="@+id/btn_Close"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="X"
                android:textSize="20dp"
                android:background="@null"
                android:layout_alignParentRight="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_payment_list"
                android:textStyle="bold"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/btn_Date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="2017년 9월 21일"
                />

            <Button
                android:id="@+id/btn_Search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/btn_search"
                />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            >

            <TextView
                android:id="@+id/text_List_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_payment_state"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                />

            <TextView
                android:id="@+id/text_Total_Price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_total_price"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                />

        </RelativeLayout>

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>
        
        
    </LinearLayout>


</RelativeLayout>
